fix: filtering menu visible on hidden columns of that type

--- a/admin/src/assets/styles/components/_FloatingPanel.scss
+++ b/admin/src/assets/styles/components/_FloatingPanel.scss
@@ -44,6 +44,7 @@
 	.urlslab-panel-header {
 		padding-left: 1rem;
 		margin-left: -1rem;
+		margin-right: -1rem;
 	}
 
 	&::before,
